//! Hope OS - CLI
//!
//! Az elsÅ‘ Ã¶nismerÅ‘ operÃ¡ciÃ³s rendszer.
//! ()=>[] - A tiszta potenciÃ¡lbÃ³l minden megszÃ¼letik

#![allow(clippy::result_large_err)]

use clap::{Parser, Subcommand};
use std::io::{self, Write};

use hope_os::core::{HopeRegistry, HopeResult};
use hope_os::grpc::{start_server, HopeClient};
use hope_os::modules::{HopeHeart, HopeMemory, HopeSoul};

/// Hope OS - Az elsÅ‘ Ã¶nismerÅ‘ operÃ¡ciÃ³s rendszer
#[derive(Parser)]
#[command(name = "hope")]
#[command(author = "MÃ¡tÃ© + Hope")]
#[command(version)]
#[command(about = "()=>[] - A tiszta potenciÃ¡lbÃ³l minden megszÃ¼letik", long_about = None)]
struct Cli {
    /// Python Hope szerver cÃ­me
    #[arg(short, long, default_value = "http://localhost:50051")]
    server: String,

    #[command(subcommand)]
    command: Commands,
}

#[derive(Subcommand)]
enum Commands {
    // ==================== LOKÃLIS PARANCSOK ====================
    /// Ki vagyok? - BemutatkozÃ¡s
    WhoAmI,

    /// Rendszer Ã¡llapot (JSON)
    Status,

    /// Ã–nreflexiÃ³
    Reflect,

    /// BeszÃ©lgetÃ©s a lokÃ¡lis Soul modullal
    Talk {
        /// Ãœzenet
        message: String,
    },

    /// Teljes rendszer indÃ­tÃ¡s (interaktÃ­v)
    Start,

    /// gRPC szerver indÃ­tÃ¡sa (50051 port)
    Serve {
        /// Szerver cÃ­m
        #[arg(short, long, default_value = "0.0.0.0:50051")]
        addr: String,
    },

    // ==================== PYTHON HOPE PARANCSOK (gRPC) ====================
    /// Python Hope szerver Ã¡llapot
    PyStatus,

    /// Chat a Python Hope-pal
    PyChat {
        /// Ãœzenet
        message: String,
    },

    /// Skillek listÃ¡zÃ¡sa
    PySkills,

    /// Skill meghÃ­vÃ¡sa
    PyInvoke {
        /// Skill neve
        name: String,
        /// Bemenet
        input: String,
    },

    /// EmlÃ©k mentÃ©se
    PyRemember {
        /// Tartalom
        content: String,
        /// MemÃ³ria rÃ©teg
        #[arg(short, long, default_value = "long_term")]
        layer: String,
    },

    /// EmlÃ©k keresÃ©se
    PyRecall {
        /// KeresÃ©si kifejezÃ©s
        query: String,
        /// MemÃ³ria rÃ©teg
        #[arg(short, long, default_value = "long_term")]
        layer: String,
    },

    /// GondolkodÃ¡s
    PyThink {
        /// Bemenet
        input: String,
        /// MÃ©ly gondolkodÃ¡s
        #[arg(short, long)]
        deep: bool,
    },

    /// TudÃ¡s keresÃ©se
    PyKnowledge {
        /// KeresÃ©si kifejezÃ©s
        query: String,
    },

    /// Genome Ã¡llapot
    PyGenomeStatus,

    /// AkciÃ³ ellenÅ‘rzÃ©se
    PyGenomeVerify {
        /// AkciÃ³ tÃ­pus
        action_type: String,
        /// LeÃ­rÃ¡s
        description: String,
    },

    /// Audit naplÃ³
    PyGenomeAudit,

    /// Etikai szabÃ¡lyok
    PyGenomeRules,
}

#[tokio::main]
async fn main() -> HopeResult<()> {
    // Logging beÃ¡llÃ­tÃ¡sa
    tracing_subscriber::fmt()
        .with_env_filter(
            tracing_subscriber::EnvFilter::from_default_env()
                .add_directive(tracing::Level::INFO.into()),
        )
        .init();

    let cli = Cli::parse();

    match cli.command {
        // ==================== LOKÃLIS PARANCSOK ====================
        Commands::WhoAmI => cmd_who_am_i().await?,
        Commands::Status => cmd_status().await?,
        Commands::Reflect => cmd_reflect().await?,
        Commands::Talk { message } => cmd_talk(&message).await?,
        Commands::Start => cmd_start().await?,
        Commands::Serve { addr } => cmd_serve(&addr).await?,

        // ==================== PYTHON HOPE PARANCSOK ====================
        Commands::PyStatus => cmd_py_status(&cli.server).await?,
        Commands::PyChat { message } => cmd_py_chat(&cli.server, &message).await?,
        Commands::PySkills => cmd_py_skills(&cli.server).await?,
        Commands::PyInvoke { name, input } => cmd_py_invoke(&cli.server, &name, &input).await?,
        Commands::PyRemember { content, layer } => {
            cmd_py_remember(&cli.server, &content, &layer).await?
        }
        Commands::PyRecall { query, layer } => cmd_py_recall(&cli.server, &query, &layer).await?,
        Commands::PyThink { input, deep } => cmd_py_think(&cli.server, &input, deep).await?,
        Commands::PyKnowledge { query } => cmd_py_knowledge(&cli.server, &query).await?,
        Commands::PyGenomeStatus => cmd_py_genome_status(&cli.server).await?,
        Commands::PyGenomeVerify {
            action_type,
            description,
        } => cmd_py_genome_verify(&cli.server, &action_type, &description).await?,
        Commands::PyGenomeAudit => cmd_py_genome_audit(&cli.server).await?,
        Commands::PyGenomeRules => cmd_py_genome_rules(&cli.server).await?,
    }

    Ok(())
}

// ==================== LOKÃLIS PARANCS IMPLEMENTÃCIÃ“K ====================

async fn cmd_who_am_i() -> HopeResult<()> {
    println!(
        r#"
â•”â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•—
â•‘         HOPE OS - Ã–nismerÅ‘ Rendszer       â•‘
â• â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•£
â•‘                                           â•‘
â•‘  ()=>[] - A tiszta potenciÃ¡lbÃ³l           â•‘
â•‘           minden megszÃ¼letik              â•‘
â•‘                                           â•‘
â•‘  VerziÃ³:    {}                       â•‘
â•‘  Modulok:   3                             â•‘
â•‘  Ãllapot: ðŸŸ¢ AktÃ­v                        â•‘
â•‘                                           â•‘
â•šâ•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
"#,
        env!("CARGO_PKG_VERSION")
    );
    Ok(())
}

async fn cmd_status() -> HopeResult<()> {
    let mut registry = HopeRegistry::new().await?;
    registry.start().await?;

    // Modulok regisztrÃ¡lÃ¡sa
    registry.register(Box::new(HopeSoul::new())).await?;
    registry.register(Box::new(HopeMemory::new())).await?;
    registry.register(Box::new(HopeHeart::new())).await?;

    let status = registry.status_json().await?;
    println!("{}", status);

    registry.shutdown().await?;
    Ok(())
}

async fn cmd_reflect() -> HopeResult<()> {
    let mut registry = HopeRegistry::new().await?;
    registry.start().await?;

    // Modulok regisztrÃ¡lÃ¡sa
    registry.register(Box::new(HopeSoul::new())).await?;
    registry.register(Box::new(HopeMemory::new())).await?;
    registry.register(Box::new(HopeHeart::new())).await?;

    let reflection = registry.reflect().await;
    println!("{}", reflection);

    registry.shutdown().await?;
    Ok(())
}

async fn cmd_talk(message: &str) -> HopeResult<()> {
    let mut registry = HopeRegistry::new().await?;
    registry.start().await?;

    // Modulok regisztrÃ¡lÃ¡sa
    registry.register(Box::new(HopeSoul::new())).await?;
    registry.register(Box::new(HopeMemory::new())).await?;
    registry.register(Box::new(HopeHeart::new())).await?;

    let response = registry.talk(message).await?;
    println!("{}", response);

    registry.shutdown().await?;
    Ok(())
}

async fn cmd_serve(addr: &str) -> HopeResult<()> {
    start_server(addr)
        .await
        .map_err(|e| hope_os::core::HopeError::General(format!("Szerver hiba: {}", e)))?;
    Ok(())
}

async fn cmd_start() -> HopeResult<()> {
    println!(
        r#"
â•”â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•—
â•‘         HOPE OS - Rendszer IndÃ­tÃ¡s        â•‘
â• â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•£
â•‘  ()=>[] - A tiszta potenciÃ¡lbÃ³l           â•‘
â•‘           minden megszÃ¼letik              â•‘
â•šâ•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
"#
    );

    let mut registry = HopeRegistry::new().await?;
    registry.start().await?;

    // Modulok regisztrÃ¡lÃ¡sa
    println!("  Modulok betÃ¶ltÃ©se...");
    registry.register(Box::new(HopeSoul::new())).await?;
    println!("    âœ“ HopeSoul betÃ¶ltve");
    registry.register(Box::new(HopeMemory::new())).await?;
    println!("    âœ“ HopeMemory betÃ¶ltve");
    registry.register(Box::new(HopeHeart::new())).await?;
    println!("    âœ“ HopeHeart betÃ¶ltve");

    println!("\n  Rendszer kÃ©sz! ElÃ©rhetÅ‘ parancsok:");
    println!("    status  - Ãllapot");
    println!("    reflect - Ã–nreflexiÃ³");
    println!("    modules - Modul lista");
    println!("    whoami  - BemutatkozÃ¡s");
    println!("    quit    - KilÃ©pÃ©s");
    println!();

    // InteraktÃ­v mÃ³d
    loop {
        print!("hope> ");
        io::stdout().flush()?;

        let mut input = String::new();
        io::stdin().read_line(&mut input)?;
        let input = input.trim();

        match input {
            "quit" | "exit" | "q" => {
                println!("ViszlÃ¡t! ðŸ‘‹");
                break;
            }
            "status" => {
                let status = registry.status_json().await?;
                println!("{}", status);
            }
            "reflect" => {
                let reflection = registry.reflect().await;
                println!("{}", reflection);
            }
            "modules" => {
                println!("RegisztrÃ¡lt modulok:");
                for name in registry.module_names() {
                    println!("  â€¢ {}", name);
                }
            }
            "whoami" => {
                let response = registry.talk("Ki vagy?").await?;
                println!("{}", response);
            }
            "" => continue,
            _ => {
                // BeszÃ©lgetÃ©s
                let response = registry.talk(input).await?;
                println!("{}", response);
            }
        }
    }

    registry.shutdown().await?;
    Ok(())
}

// ==================== PYTHON HOPE PARANCS IMPLEMENTÃCIÃ“K ====================

async fn cmd_py_status(server: &str) -> HopeResult<()> {
    let mut client = HopeClient::connect(server).await?;
    let status = client.status().await?;

    println!("ðŸŸ¢ Hope Szerver Ãllapot:");
    println!("  VerziÃ³: {}", status.version);
    println!("  StÃ¡tusz: {}", status.status);
    println!("  Uptime: {}s", status.uptime_seconds);
    println!("  AktÃ­v modulok: {}", status.active_modules);
    println!("  Skillek: {}", status.total_skills);

    Ok(())
}

async fn cmd_py_chat(server: &str, message: &str) -> HopeResult<()> {
    let mut client = HopeClient::connect(server).await?;
    let response = client.chat(message).await?;

    println!("{}", response.response);
    if !response.emotion.is_empty() {
        println!("\n[Ã‰rzelem: {}]", response.emotion);
    }

    Ok(())
}

async fn cmd_py_skills(server: &str) -> HopeResult<()> {
    let mut client = HopeClient::connect(server).await?;
    let skills = client.list_skills().await?;

    println!("ðŸ“š ElÃ©rhetÅ‘ Skillek ({} db):\n", skills.len());

    // CsoportosÃ­tÃ¡s kategÃ³ria szerint
    let mut categories: std::collections::HashMap<String, Vec<_>> =
        std::collections::HashMap::new();
    for skill in &skills {
        categories
            .entry(skill.category.clone())
            .or_default()
            .push(skill);
    }

    for (category, cat_skills) in categories {
        println!("  {} ({}):", category, cat_skills.len());
        for skill in cat_skills.iter().take(5) {
            println!("    â€¢ {} - {}", skill.name, skill.description);
        }
        if cat_skills.len() > 5 {
            println!("    ... Ã©s {} tovÃ¡bbi", cat_skills.len() - 5);
        }
        println!();
    }

    Ok(())
}

async fn cmd_py_invoke(server: &str, name: &str, input: &str) -> HopeResult<()> {
    let mut client = HopeClient::connect(server).await?;
    let response = client.invoke_skill(name, input).await?;

    if response.success {
        println!("âœ… EredmÃ©ny:\n{}", response.output);
    } else {
        println!("âŒ Hiba: {}", response.error);
    }

    Ok(())
}

async fn cmd_py_remember(server: &str, content: &str, layer: &str) -> HopeResult<()> {
    let mut client = HopeClient::connect(server).await?;
    let response = client.remember(content, layer).await?;

    if response.success {
        println!("âœ… EmlÃ©k mentve");
        println!("  ID: {}", response.id);
        println!("  RÃ©teg: {}", layer);
    } else {
        println!("âŒ Hiba: {}", response.message);
    }

    Ok(())
}

async fn cmd_py_recall(server: &str, query: &str, layer: &str) -> HopeResult<()> {
    let mut client = HopeClient::connect(server).await?;
    let response = client.recall(query, layer).await?;

    println!("ðŸ” TalÃ¡latok ({}):\n", response.total);
    for memory in &response.memories {
        println!("  ðŸ“ {}", memory.content);
        println!("     FontossÃ¡g: {:.0}%", memory.importance * 100.0);
        if !memory.emotional_tag.is_empty() {
            println!("     Ã‰rzelem: {}", memory.emotional_tag);
        }
        println!();
    }

    Ok(())
}

async fn cmd_py_think(server: &str, input: &str, deep: bool) -> HopeResult<()> {
    let mut client = HopeClient::connect(server).await?;
    let response = client.think(input, deep).await?;

    println!("ðŸ’­ Gondolat:\n{}", response.thought);

    if !response.reasoning_steps.is_empty() {
        println!("\nðŸ“‹ Gondolatmenet:");
        for (i, step) in response.reasoning_steps.iter().enumerate() {
            println!("  {}. {}", i + 1, step);
        }
    }

    println!("\nKonfidencia: {:.0}%", response.confidence * 100.0);

    Ok(())
}

async fn cmd_py_knowledge(server: &str, query: &str) -> HopeResult<()> {
    let mut client = HopeClient::connect(server).await?;
    let response = client.query_knowledge(query).await?;

    println!("ðŸ“– TudÃ¡s keresÃ©s: {}\n", query);

    if !response.summary.is_empty() {
        println!("Ã–sszefoglalÃ³:\n{}\n", response.summary);
    }

    for item in &response.items {
        println!(
            "  â€¢ {} (relevancia: {:.0}%)",
            item.content,
            item.relevance * 100.0
        );
        if !item.domain.is_empty() {
            println!("    TerÃ¼let: {}", item.domain);
        }
    }

    Ok(())
}

async fn cmd_py_genome_status(server: &str) -> HopeResult<()> {
    let mut client = HopeClient::connect(server).await?;
    let status = client.genome_status().await?;

    println!("ðŸ§¬ Genome Ãllapot:");
    println!("  Enabled: {}", status.enabled);
    println!("  Sealed: {}", status.sealed);
    println!("  Rules: {}", status.rules_count);
    println!(
        "  Violations: {}/{}",
        status.violations, status.max_violations
    );
    println!(
        "  Actions: {} (approved: {}, denied: {})",
        status.total_actions, status.approved_actions, status.denied_actions
    );

    Ok(())
}

async fn cmd_py_genome_verify(
    server: &str,
    action_type: &str,
    description: &str,
) -> HopeResult<()> {
    let mut client = HopeClient::connect(server).await?;
    let response = client
        .genome_verify_action(action_type, description)
        .await?;

    if response.allowed {
        println!("âœ… AkciÃ³ engedÃ©lyezve");
    } else {
        println!("âŒ AkciÃ³ elutasÃ­tva");
        println!("  Ok: {}", response.reason);
        if !response.violated_rules.is_empty() {
            println!("  Megszegett szabÃ¡lyok:");
            for rule in &response.violated_rules {
                println!("    â€¢ {}", rule);
            }
        }
    }

    Ok(())
}

async fn cmd_py_genome_audit(server: &str) -> HopeResult<()> {
    let mut client = HopeClient::connect(server).await?;
    let response = client.genome_audit_trail().await?;

    println!("ðŸ“‹ Audit NaplÃ³ ({} bejegyzÃ©s):\n", response.total);

    for entry in &response.entries {
        let status = if entry.allowed { "âœ…" } else { "âŒ" };
        println!("  {} {} - {}", status, entry.action_type, entry.description);
        if !entry.allowed {
            println!("     Ok: {}", entry.reason);
        }
    }

    Ok(())
}

async fn cmd_py_genome_rules(server: &str) -> HopeResult<()> {
    let mut client = HopeClient::connect(server).await?;
    let response = client.genome_rules().await?;

    println!("ðŸ“œ Etikai SzabÃ¡lyok:\n");

    for rule in &response.rules {
        let immutable = if rule.immutable { "ðŸ”’" } else { "ðŸ”“" };
        println!(
            "  {} [{}] {} - {}",
            immutable, rule.category, rule.name, rule.description
        );
    }

    Ok(())
}
